@@ -1,0 +1,7 @@
+TOPDIR = ..
+
+include $(TOPDIR)/Preamble.make
+
+DIST_FILES = osm-2.4.9-e.spec.in osm.init
+
+include $(TOPDIR)/Postamble.make
